認証周りの実装 (#7)
* sessions tableを作成 / users.name を unique にする

* login成功時にトップページにリダイレクトする

* 認証まわりの実装

* テスト

* Taskfile 更新

* main 関数を作っておく

* logoutがGETになっていたのを修正

* repository 層を作成 / oauth2 service を作成

* openapiのコード出力先が間違っていた

* session id 生成をdomainの中にいれる

* mockを使ったテストに置き換える

* ログイン後にセッションを再作成する

* url.JoinPathを使う

* session id key を定数にする

* random packageの関数を使う

* README 更新

* go test に -race オプションを付ける


* joinPathでt.Fatalを使う

* update Taskfile

* ポインターを使うのに統一

* ttlの設定

* update README

* error wrapping

* エラーの内容はログに出すようにする

* repositoryのgenerateを分ける

* session manger を interface に切り出す

* middleware のテスト

* 命名の修正

* テスト用oauth2serverをhttptestで起動する

* Repositoryのドキュメントを書く

* test用のoauth2 serverを `oauth2MockServer` に改名

* middleware のテストを table driven にする

---------
